--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mindcaptor-server",
   "version": "1.0.0",
   "description": "",
-  "main": "practice.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,18 @@
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "2.2.1"
+    "prettier": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
+    "pm2": "^4.5.6",
     "sequelize": "^6.6.2"
   }
 }
