--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "pm2": "^4.5.6",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "sequelize-auto-migrations": "^1.0.3"
   }
 }
