--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ DATABASE_USERNAME=root
 DATABASE_NAME=gamedata
 ACCESS_SECRET=
 REFRESH_SECRET= 
+
+DATABASE_HOST=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_PORT=
