--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemon": "^2.0.7",
     "pm2": "^4.5.6",
     "sequelize": "^6.6.2",
+    "sha256": "^0.2.0",
     "socket.io": "^4.0.1"
   }
 }
